# Cookie-Engine

./: .gitignore  CHECKLIST.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  build.bat  ship.bat  vcpkg.json
Cookie-Engine/: CMakeLists.txt  Cookie-Engine.cpp  Cookie-Engine.h
apps/CookieEditor/: CMakeLists.txt
apps/CookieEditor/cmake/: TerminateRunningEditor.cmake
apps/CookieEditor/include/Cookie/Editor/: EditorMainWindow.h
apps/CookieEditor/src/: EditorMainWindow.cpp  main.cpp
apps/CookieRuntime/: CMakeLists.txt
apps/CookieRuntime/src/: main.cpp
config/: engine.dev.json  engine.json  engine.release.json  game.json  graphics.json  input.cfg
content/: base.pak  cooked_assets.pakreg
content/materials/: default.cookieasset
content/scenes/: player.scene.cookieasset  sample.scene.cookieasset
docs/: asset-system-v0.md
engine/Assets/: CMakeLists.txt
engine/Assets/include/Cookie/Assets/: AssetId.h  AssetMeta.h  AssetPackage.h  AssetRegistry.h  CookedAssetRegistry.h  GlbMeshLoader.h  MaterialAsset.h  SceneAsset.h
engine/Assets/src/: AssetId.cpp  AssetMeta.cpp  AssetPackage.cpp  AssetRegistry.cpp  CookedAssetRegistry.cpp  GlbMeshLoader.cpp  MaterialAsset.cpp  SceneAsset.cpp
engine/Core/: CMakeLists.txt
engine/Core/include/Cookie/Core/: Application.h  AudioBackend.h  ConfigPaths.h  EngineConfig.h  GameConfig.h  GameLogicModule.h  Logger.h  PhysicsBackend.h
engine/Core/src/: Application.cpp  ConfigPaths.cpp  CoreModuleExports.cpp  EngineConfig.cpp  GameConfig.cpp  GameLogicModule.cpp  Logger.cpp
engine/Platform/: CMakeLists.txt
engine/Platform/include/Cookie/Platform/: PlatformLibrary.h  PlatformPaths.h  PlatformWindow.h
engine/Platform/src/: PlatformLibrary.cpp  PlatformPaths.cpp  PlatformWindow.cpp
engine/Renderer/: CMakeLists.txt
engine/Renderer/include/Cookie/Renderer/: MeshAsset.h  Primitives.h  RendererBackend.h  RendererConfig.h  SceneBuilder.h  Transform.h
engine/Renderer/src/: MeshAsset.cpp  Primitives.cpp  RendererConfig.cpp  SceneBuilder.cpp  Transform.cpp
game/: CMakeLists.txt
game/src/: GameLogic.cpp
modules/Audio/: CMakeLists.txt
modules/Audio/include/Cookie/Audio/: NullAudioBackend.h
modules/Audio/src/: AudioExports.cpp  NullAudioBackend.cpp
modules/Physics/: CMakeLists.txt
modules/Physics/include/Cookie/Physics/: JoltPhysicsBackend.h
modules/Physics/src/: JoltPhysicsBackend.cpp  PhysicsExports.cpp
modules/RendererDX11/: CMakeLists.txt
modules/RendererDX11/include/Cookie/RendererDX11/: RendererDX11Backend.h
modules/RendererDX11/src/: RendererDX11Backend.cpp  RendererDX11Exports.cpp
tools/: CMakeLists.txt
tools/CookieBuildPipeline/: CMakeLists.txt
tools/CookieBuildPipeline/include/Cookie/Tools/: BuildPipeline.h  PackageInspector.h
tools/CookieBuildPipeline/src/: BuildPipeline.cpp  PackageInspector.cpp
tools/CookieExportTool/: CMakeLists.txt
tools/CookieExportTool/src/: main.cpp
tools/CookiePakTool/: CMakeLists.txt
tools/CookiePakTool/src/: main.cpp
